fix cropperjs

--- a/media/com_quantummanager/css/joomla4.css
+++ b/media/com_quantummanager/css/joomla4.css
@@ -131,3 +131,7 @@ body.com_quantummanager #content > * > *
 .quantummanager-full-component-wrap .quantumcropperjs-module .toolbar {
     width: 18%;
 }
+
+.quantumcropperjs-module .editor {
+    max-width: 82%;
+}
